fix alignment

--- a/css/blog.css
+++ b/css/blog.css
@@ -1,7 +1,7 @@
 /* Blog Styles - Dark Mode */
 
 body {
-    padding-top: 70px;
+    padding-top: 40px;
     background-color: #1a1a1a;
     color: #e0e0e0;
 }
@@ -102,9 +102,9 @@ a:hover {
     display: flex;
     flex-direction: column;
     align-items: flex-start;
-    line-height: 1.2;
-    padding-top: 15px;
-    padding-bottom: 15px;
+    line-height: 1.0;
+    padding-top: 5px;
+    padding-bottom: 5px;
     height: auto;
 }
 
